--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <button id='btn3' class='button' data-color='orange'>Orange</button>
         <button id='btn4' class='button' data-color='chocolate'>Chocolate</button>
 
+
+        <script src="./js/app.js"></script>
     </body>
 
 </html>
