--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=">
+        <meta name="description" content="Simple app Pop-Up Window Modal Vanilla-JS" />
+        <meta name="keywords" content="HTML , CSS3 & Vanilla-JS" />
+        <meta name="author" content="Jelson J" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Polymorphism in JavaScript</title>
     </head>
 
