--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Polymorphism in JavaScript</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
-
-        <button id='btn1' class='button' data-color='green'>Green</button>
-        <button id='btn2' class='button' data-color='black'>Black</button>
-        <button id='btn3' class='button' data-color='orange'>Orange</button>
-        <button id='btn4' class='button' data-color='chocolate'>Chocolate</button>
-
+        <div class="colors">
+            <button id='btn1' class='button' data-color='green'>Green</button>
+            <button id='btn2' class='button' data-color='black'>Black</button>
+            <button id='btn3' class='button' data-color='orange'>Orange</button>
+            <button id='btn4' class='button' data-color='chocolate'>Chocolate</button>
+        </div>
 
         <script src="./js/app.js"></script>
     </body>
